3.1.0
   * Mark many strings as translatable.
   * Now appears as 'Advanced Settings' in GNOME shell search

3.0.5
   * More autostart desktop file fixes. Try harder to autostart nautilus when
     tweaking desktop handling.
   * Appearance improvements (theme install, sorted combo boxes)
   * Tweak window focus mode (focus follows mouse)
   * Tweak desktop item visibility with more control (show trash, show computer etc)
   * Dont offer to restart shell multiple times when enabling extensions

3.0.4
   * Support system wide themes (bug 648751)
   * Fix duplicate themes (bug 649687)
   * A theming specification for shell themes has been developed and agreed upon
     by a number of theme authors. If installing a theme matching this specification
     show the appropriate name
     http://www.fpmurphy.com/public/gnome_theme_packaging_spec_d2.txt
   * Support management of Shell extensions (in home directory)

3.0.3
   * Autostart nautilus at login if it is configured to show
     desktop icons (bug 648087)
   * Improved robustness for missing theme/icon
     directories (bug 648735)
   * Fix shell theme installation for themes found in the wild
   * Improve shell theme selection

3.0.2
   * Really tweak window theme - both the fallback and the
     shell metacity/mutter theme
   * Fix attribution of data/welcome.png

3.0.1
   * Fix localization
   * Tweak window theme
   * Tweak week date in calendar (Emmanuele Bassi)
   * Tweak cursor themes (Andrea Fagiani)
   * Support user installed themes in $HOME (Andrea Fagiani)
   * Remove org.gnome.desktop.background draw-backgroud tweak, it
     should never be false

3.0.0
   * First stable release
   * Enable icon theme selection
   * Tweak font antialiasing
   * Support l10n

2.91.93
    * Add license (GPL3)
    * Tweak shell clock to show date
    * Tweak font hinting

2.91.92
    * Initial Release
    * Support shell theme change and installation
    * Tweak gtk theme
    * Tweak the user-interface and titlebar fonts