@@ -57,6 +57,8 @@ if __name__ == '__main__':
                   help="Enable test and debug code")
     parser.add_option("-p", "--prefix",
                   help="Installation prefix (for gsettings schema, themes, etc)", metavar="[/, /usr]")
+    parser.add_option("-v", "--verbose", action="store_true",
+                  help="Print the names of settings modified")
     options, args = parser.parse_args()
 
     try:
@@ -82,6 +84,7 @@ if __name__ == '__main__':
     gtweak.PKG_DATA_DIR = PKG_DATA_DIR
     gtweak.ENABLE_TEST = options.test
     gtweak.APP_NAME = "gnome-tweak-tool"
+    gtweak.VERBOSE = options.verbose
 
     logging.basicConfig(format="%(levelname)-8s: %(message)s", level=logging.INFO)
 
