@@ -1,6 +1,7 @@
 3.1.0
    * Mark many strings as translatable.
    * Now appears as 'Advanced Settings' in GNOME shell search
+   * Add a -v,--verbose option that prints changed settings
 
 3.0.5
    * More autostart desktop file fixes. Try harder to autostart nautilus when
